# DistriAI-Core

./: Anchor.toml  README.md  migration.md  package.json
client/: client.ts  migration.ts
client/migration/: machine.ts  order.ts
programs/distri_ai/: Cargo.toml
programs/distri_ai/src/: errors.rs  lib.rs
programs/distri_ai/src/instructions/: ai_model.rs  dataset.rs  machine.rs  mod.rs  order.rs  reward.rs  statistics.rs  task.rs
programs/distri_ai/src/migration/: machine.rs  mod.rs  order.rs
programs/distri_ai/src/state/: ai_model.rs  dataset.rs  mod.rs  order.rs  reward.rs  statistics.rs  task.rs
src/: errors.rs  lib.rs
src/instructions/: machine.rs  migration.rs  mod.rs  order.rs  reward.rs  task.rs
src/migration/: order.rs
src/state/: machine.rs  order.rs  reward.rs  task.rs
tests/: anchor.test.ts  anchor.ts
